--- a/tootoo/r2/tootoo-r2.html
+++ b/tootoo/r2/tootoo-r2.html
@@ -105,7 +105,7 @@
 		user : 'pushme-pullyou',
 		repo : 'pushme-pullyou.github.io',
 		branch : 'master',
-		folder : ''
+		folder : 'tootoo'
 	};
 
 	users.sagemathGH = {
