--- a/tootoo/r3/tootoo-r3.html
+++ b/tootoo/r3/tootoo-r3.html
@@ -105,7 +105,8 @@
 		user : 'pushme-pullyou',
 		repo : 'pushme-pullyou.github.io',
 		branch : 'master',
-		folder : ''
+		folder : '',
+		noIndex: 'true'
 	};
 
 	users.sagemathGH = {
