--- a/tootoo/r3/tootoo-r3.html
+++ b/tootoo/r3/tootoo-r3.html
@@ -9,7 +9,7 @@
 <meta name=date content='2016-12-01' >
 </head>
 <body>
-<script src=https://cdnjs.cloudflare.com/ajax/libs/showdown/1.5.0/showdown.min.js ></script>
+<script src=https://rawgit.com/showdownjs/showdown/develop/dist/showdown.min.js ></script>
 <script src=tootoo-r3.js ></script>
 <script>
 // Copyright © 2016 Jaanga authors. MIT license
@@ -120,6 +120,13 @@
 		user : 'sagemath',
 		repo : 'sagecell',
 		branch : 'gh-pages',
+		folder : ''
+	};
+
+	users.sagemathCell = {
+		user : 'sagemath',
+		repo : 'sage',
+		branch : 'develop',
 		folder : ''
 	};
 
