--- a/dabdab/r1/index.html
+++ b/dabdab/r1/index.html
@@ -49,7 +49,10 @@
 
 		'<optgroup label="Theo" >' +
 			'<option selected >Theo-Armour</option>' +
+			'<option selected >Pushme-Pullyou</option>' +
 			'<option>jaanga</option>' +
+			'<option>icoloridelbuio</option>' +
+			
 		'</optgroup>' +
 
 		'<optgroup label="Three.js/WedGL" >' +
