fixing vars & gallery

--- a/tootoo/r4/tootoo-r4.html
+++ b/tootoo/r4/tootoo-r4.html
@@ -147,9 +147,10 @@
 
 	users.theoArmour = {
 		user : 'theo-armour',
-		repo : 'theo-armour.github.io',
+		repo : 'drawing',
 		branch : 'master',
-		folder : 'tootoo'
+		folder : '',
+		noIndex: 'true'
 	};
 
 /*
