--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <script>
 
-	window.location.href = 'tootoo/r3/tootoo-r3.html' + location.hash;
+	window.location.href = 'tootoo/r4/index.html' + location.hash;
 
 </script>
 </body>
