--- a/tootoo/index.html
+++ b/tootoo/index.html
@@ -6,7 +6,7 @@
 <body>
 <script>
 
-	window.location.href = '../index.html' + location.hash;
+	window.location.href = './r4/tootoo-r4.html' + location.hash;
 
 </script>
 </body>
