--- a/core/r1/2-eus-events-user/eus-events-user.html
+++ b/core/r1/2-eus-events-user/eus-events-user.html
@@ -12,13 +12,13 @@
 <body>
 <script src=https://cdnjs.cloudflare.com/ajax/libs/showdown/1.4.4/showdown.min.js ></script>
 
-<script src=../../r2/0-cor-core/cor-core.js ></script>
-<script src=../../r2/0-mn3-menu-three/mn3-menu-three.js ></script>
-<script src=../../r2/0-api-authentication/api-authentication.js ></script>
+<script src=../../../core/r1/0-cor-core/cor-core.js ></script>
+<script src=../../../core/r1/0-mn3-menu-three/mn3-menu-three.js ></script>
+<script src=../../../core/r1/0-api-authentication/api-authentication.js ></script>
 
-<script src=../../r2/0-usr-users/usr-users.js ></script>
-<script src=../../r2/1-dat-data/dat-data.js ></script>
-<script src=../../r2/2-eus-events-user/eus-events-user.js ></script>
+<script src=../../../core/r1/0-usr-users/usr-users.js ></script>
+<script src=../../../core/r1/1-dat-data/dat-data.js ></script>
+<script src=../../../core/r1/2-eus-events-user/eus-events-user.js ></script>
 <script>
 
 // so DAT button can work...
