--- a/tootoo/r4/tootoo-r4.html
+++ b/tootoo/r4/tootoo-r4.html
@@ -22,9 +22,10 @@
 	users.d3 = {
 		user : 'd3',
 		repo : 'd3',
-		branch : 'gh-pages',
+		branch : 'master',
 		folder : '',
 		rawgit: true
+//		noIndex: 'true'
 	};
 
 	users.d3GH = {
@@ -199,7 +200,7 @@
 				'<div id=menu >' +
 
 				'<h2>' +
-					'<a href=http://pushme-pullyou.github.io/ title="Pushme-Pullyou - your coming and going happy place" > &#x2766 </a><br>' +
+					'<a href=https://pushme-pullyou.github.io/ title="Pushme-Pullyou - your coming and going happy place" > &#x2766 </a><br>' +
 					'<a href="" title="Click here to refresh this page" >' + document.title + '</a>' +
 					' ~ <a href="https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo/" onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
 				'</h2>' +
@@ -249,7 +250,7 @@
 
 					'<summary><h3>About</h3></summary>' +
 
-					'<p>Copyright &copy; 2016 Jaanga authors. <a href=http://jaanga.github.io/home/r4/index.html#http://jaanga.github.io/jaanga-copyright-and-mit-license.md >MIT license</a>.</p>' +
+					'<p>Copyright &copy; 2016 Jaanga authors. <a href=https://jaanga.github.io/home/r4/index.html#http://jaanga.github.io/jaanga-copyright-and-mit-license.md >MIT license</a>.</p>' +
 					'<p>Click the \'i in a circle\' icon for more <a href=index.html#readme.md title="Click here for help and information" >help</a>.</p>' +
 
 				'</details>' +
