update Theo Draw

--- a/tootoo/r4/tootoo-r4-theoDraw.html
+++ b/tootoo/r4/tootoo-r4-theoDraw.html
@@ -6,11 +6,11 @@
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='Basic slide in and slide out menu with three bar icon that adjusts for small screen size.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
-<meta name=date content='2016-11-28' >
+<meta name=date content='2016-12-19' >
 </head>
 <body>
 <script src=https://cdnjs.cloudflare.com/ajax/libs/showdown/1.5.0/showdown.min.js ></script>
-<script src=tootoo-r3.js ></script>
+<script src=tootoo-r4.js ></script>
 <script>
 
 // https://github.com/showdownjs/showdown
@@ -23,7 +23,8 @@
 		user : 'theo-armour',
 		repo : 'drawing',
 		branch : 'master',
-		folder : ''
+		folder : '',
+		noIndex : 'true'
 	};
 
 /*
