tootoo update readme

--- a/tootoo/r4/tootoo-r4.html
+++ b/tootoo/r4/tootoo-r4.html
@@ -207,11 +207,11 @@
 
 				'<div class=popUp id=popHelp style=display:none; ><p>Hi there!</p>Click the i-in-circle, info icon for latest updates.</div>' +
 
-				'<div><small>Browse the contents of many files on GitHub really quickly</small></div>' +
+				'<div><small>Browse the contents of many files in a GitHub repo really quickly</small></div>' +
 
 				'<details id=SELdetailsUser open title="" >' +
 
-					'<summary><h3>Select GitHub User</h3></summary>' +
+					'<summary><h3>Select GitHub User / Repo</h3></summary>' +
 
 						'<select id=SELselUser onchange=setUser(this.value); title="Select user" size=10 style=width:100%;  >' +
 
