--- a/tootoo/r5/tootoo-r5-theoDraw-00.html
+++ b/tootoo/r5/tootoo-r5-theoDraw-00.html
@@ -6,16 +6,14 @@
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='Basic slide in and slide out menu with three bar icon that adjusts for small screen size.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
-<meta name=date content='2016-12-19' >
+<meta name=date content='2017-02-26' >
 </head>
 <body>
-<script src=https://cdnjs.cloudflare.com/ajax/libs/showdown/1.5.0/showdown.min.js ></script>
-<script src=tootoo-r4.js ></script>
+<script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
+<script src=tootoo-r5.js ></script>
 <script>
 
 // https://github.com/showdownjs/showdown
-// http://stackoverflow.com/questions/17140711/how-to-show-a-list-or-array-into-a-tree-structure-in-javascript
-
 
 	var users = {};
 
@@ -57,11 +55,12 @@
 			'.popUp { background-color: white; left: 300px; border: 1px solid red; opacity: 1.0; padding: 5px; position: absolute; width: 120px; z-index: 10; }' +
 			'#bars { color: crimson; cursor: pointer; font-size: 24pt; text-decoration: none; }' +
 			'#container {  height: 100%; left: 0; position: absolute; transition: left 1s; width: 100%;}' +
-			'#TOOcontents { border: 0px #ccc solid; left: 375px; position: absolute; }' +
+			'#contents { border: 0px #ccc solid; left: 375px; position: absolute; }' +
 			'#hamburger { background-color: #eee; left: 325px; position: absolute; top: 20px; }' +
 			'#hamburger h2 { margin: 0; }' +
 			'#menu { background-color: #eee; border: 1px #ccc solid; box-sizing:border-box;  height: 100%; overflow-y: auto; padding: 0 10px; position: fixed; width: 325px; }' +
 //			'#menu h2 { margin: 0; }' +
+			'a:hover { color: green; cursor: pointer; opacity: 1; }' +
 		'';
 
 		container = document.body.appendChild( document.createElement( 'div' ) );
@@ -117,7 +116,7 @@
 				'<div id=bars title="Click this hamburger to slide the menu" > &#9776 </div>' +
 			'</div>' +
 
-			'<div id=TOOcontents >' +
+			'<div id=contents >' +
 				'<h1>Typical contents</h1>' +
 			'</div>' +
 
@@ -129,23 +128,33 @@
 
 		TOO = users[ 'theoArmour' ];
 
-		TOO.url = 'https://api.github.com/repos/' + TOO.user + '/' + TOO.repo + '/git/trees/' + TOO.branch + '?recursive=1';
+//		TOO.url = 'https://api.github.com/repos/' + TOO.user + '/' + TOO.repo + '/git/trees/' + TOO.branch + '?recursive=1';
 
 		TOO.urlGHPages = 'https://' + TOO.user + '.github.io/' + TOO.repo + '/' + TOO.folder + ( TOO.folder ? '/' : '' );
 
-		TOO.breadcrumbs = menuBreadcrumbs;
-		TOO.menu = menuItems;
+		setUser();
 
 		requestAPIContents();
 
 	}
 
 
+	function setUser() {
+
+		TOO.contents = contents;
+		TOO.breadcrumbs = menuBreadcrumbs;
+		TOO.menu = menuItems;
+		TOO.menuInfo = menuInfo;
+
+		getNextPreviousButtons();
+
+	}
+
 	function onWindowResize() {
 
 		if ( window.self !== window.top || window.innerWidth < 500 ) { container.style.left = '-325px'; }
 
-		TOOcontents.style.width = window.innerWidth - 350;
+		contents.style.width = window.innerWidth - 350;
 
 	}
 
